--- a/css/style.css
+++ b/css/style.css
@@ -204,7 +204,7 @@ body {
 /* content sidebar */
 .content-sidebar {
     width: 260px;
-    min-height: 260px;
+    min-width: 260px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
